java 5: new xxx() -> xxx.valueOf() for Short, Byte and Character
git-svn-id: https://svn.apache.org/repos/asf/cayenne/main/trunk/framework/cayenne-jdk1.5-unpublished@605862 13f79535-47bb-0310-9956-ffa450edef68